Adding common view for circle and rectangle

--- a/SwiftUIDesign/SwiftUIDesign/Info.plist
+++ b/SwiftUIDesign/SwiftUIDesign/Info.plist
@@ -9,6 +9,8 @@
 		<string>DancingScript-Bold.ttf</string>
 		<string>DancingScript-Regular.ttf</string>
 		<string>DancingScript-VariableFont_wght.ttf</string>
+		<string>FontsFree-Net-Tungsten-Bold.ttf</string>
+		<string>FontsFree-Net-Rustic-Printed.ttf</string>
 	</array>
 </dict>
 </plist>
