--- a/SwiftUIDesign/SwiftUIDesign/Info.plist
+++ b/SwiftUIDesign/SwiftUIDesign/Info.plist
@@ -4,13 +4,8 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string>DancingScript-SemiBold.ttf</string>
-		<string>DancingScript-Medium.ttf</string>
-		<string>DancingScript-Bold.ttf</string>
-		<string>DancingScript-Regular.ttf</string>
-		<string>DancingScript-VariableFont_wght.ttf</string>
-		<string>FontsFree-Net-Tungsten-Bold.ttf</string>
-		<string>FontsFree-Net-Rustic-Printed.ttf</string>
+		<string>Oswald-Regular.ttf</string>
+		<string>Pacifico-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
